--- a/views/shop.html
+++ b/views/shop.html
@@ -8,11 +8,14 @@
   </head>
 
   <body>
-    <header>
-      <nav>
-        <ul>
-          <li><a href="/">Shop</a></li>
-          <li><a href="/admin/add-product">Add Product</a></li>
+    <header class="main-header">
+      <nav class="main-header__nav">
+        <ul class="main-header__item-list">
+          <li class="main-header__item"><a class="active" href="/">Shop</a></li>
+          <link class="main-header__item">
+            <a href="/admin/add-product">Add Product</a>
+            <link rel='stylesheet' href='/css/main.css'>
+          </li>
         </ul>
       </nav>
     </header>
