--- a/views/shop.pug
+++ b/views/shop.pug
@@ -32,6 +32,6 @@ html(lang="en")
                             .card__actions
                                 button.btn Add to Cart
 
-                else 
-                    h1 No Products
+                //- else 
+                //-     h1 No Products
         
